# rpg-chronicle

./: .env.example  .gitignore  README.md  curl_test.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: settings.json
.claude/rules/: appsec-rules.md
.github/workflows/: appsec-guard.yml
.kiro/hooks/: appsec-gate.kiro.hook  discuss-before-writing.kiro.hook  learning-log-capture.kiro.hook  phase-0-git-reminder.kiro.hook  review-docs-on-stop.kiro.hook
.kiro/skills/helping-dev/: SKILL.md
.kiro/steering/: appsec-rules.md  rpg-chronicle.md
apps/backend/: pyproject.toml
apps/backend/chronicle/: api.py  models.py
apps/backend/chronicle/clients/: openai_client.py  supabase_client.py
apps/backend/chronicle/services/: chunker.py  embedder.py
docs/learning/: architecture-decisions.md  concepts.md  git-workflow.md  python-patterns.md  web-development.md
supabase/: config.toml
supabase/migrations/: 001_mvp.sql
