[project]
name = "rpg-chronicle-backend"
version = "0.1.0"
description = "AI pipeline service for RPG Chronicle"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "openai>=1.55",
    "supabase>=2.9",
    "httpx>=0.28",
    "python-multipart>=0.0.12",
    "certifi>=2026.5.20",
    "truststore>=0.10.4",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
